--- a/HW1/HW.ipynb
+++ b/HW1/HW.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "4c09787d",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "       [26, 14, 15, 16]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "13aa317c",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
        "       [18. , 11. , 10. , 12. ]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9a56a368",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "       [18. , 11. , 10. , 18. ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5cb74c98",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
        "       [18., 10., 18.]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "5fc77bda",
    "metadata": {},
    "outputs": [
@@ -226,18 +226,19 @@
        "       [ 1. , -1. ,  0. ,  1. ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "E5 @ E3 @ E2"
+    "A = E5 @ E3 @ E2\n",
+    "A"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5c9731f8",
    "metadata": {},
    "outputs": [
@@ -250,19 +251,358 @@
        "       [0, 0, 0]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "E1 @ E4 @ E6 @ E7"
+    "C = E1 @ E4 @ E6 @ E7\n",
+    "C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8a7d5a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-8., -4., -8.],\n",
+       "       [10.,  6., 10.],\n",
+       "       [-1., -1., -1.],\n",
+       "       [18., 10., 18.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A @ B @ C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "ce35737f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.array([1, 3, 5])\n",
+    "b = np.array([2, 4, 6])\n",
+    "A = np.array([[1, 2, 3],\n",
+    "              [2, 4, 6]])\n",
+    "B = np.array([[7, 8],\n",
+    "              [9, 10],\n",
+    "              [11, 12]])\n",
+    "C = np.array([[1, 0, 0],\n",
+    "              [0, 0, 1]])\n",
+    "beta_1 = 4\n",
+    "beta_2 = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "cfd98112",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3,  7, 11])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a + b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "fea3d54d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4, 12, 20])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_1 * a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "557ce2e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2, 12, 30])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a37ae2c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14, 32, 50])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_1 * a + beta_2 * b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a95f5534",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 4,  8, 12],\n",
+       "       [ 8, 16, 24]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_1 * A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "973298bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3) (3,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mA\u001b[49m\u001b[43m \u001b[49m\u001b[43m+\u001b[49m\u001b[43m \u001b[49m\u001b[43mB\u001b[49m\n",
+      "\u001b[31mValueError\u001b[39m: operands could not be broadcast together with shapes (2,3) (3,2) "
+     ]
+    }
+   ],
+   "source": [
+    "A + B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "5f5aacda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 2, 3],\n",
+       "       [2, 4, 7]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A + C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2c86bc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 58, 116],\n",
+       "       [ 64, 128]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A @ B).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e72047c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 58, 116],\n",
+       "       [ 64, 128]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B.T @ A.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a3297f0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [2, 4, 6]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A.T).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "94f2c6ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 2],\n",
+       "       [2, 4],\n",
+       "       [3, 7]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(A + C).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b652bb41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n",
+      "[[ 2  4  6]\n",
+      " [ 6 12 18]\n",
+      " [10 20 30]]\n",
+      "44\n",
+      "[[ 2  6 10]\n",
+      " [ 4 12 20]\n",
+      " [ 6 18 30]]\n",
+      "35\n",
+      "[[ 1  3  5]\n",
+      " [ 3  9 15]\n",
+      " [ 5 15 25]]\n",
+      "56\n",
+      "[[ 4  8 12]\n",
+      " [ 8 16 24]\n",
+      " [12 24 36]]\n",
+      "176\n",
+      "[[  8  16  24]\n",
+      " [ 24  48  72]\n",
+      " [ 40  80 120]]\n",
+      "176\n",
+      "[[  8  16  24]\n",
+      " [ 24  48  72]\n",
+      " [ 40  80 120]]\n",
+      "44\n",
+      "[[ 2  6 10]\n",
+      " [ 4 12 20]\n",
+      " [ 6 18 30]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def inner_outer(a, b, mult=1):\n",
+    "    print(mult * np.inner(a, b))\n",
+    "    print(mult * np.outer(a, b))\n",
+    "\n",
+    "inner_outer(a, b)\n",
+    "inner_outer(b, a)\n",
+    "inner_outer(a, a)\n",
+    "inner_outer(b, b)\n",
+    "inner_outer(a, b, beta_1)\n",
+    "inner_outer(beta_1 * a, b)\n",
+    "inner_outer(b, a.T)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -276,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
