--- a/HW1/hw1.tex
+++ b/HW1/hw1.tex
@@ -513,6 +513,8 @@ Given two 3-dimensional vectors $\mathbf{a}, \mathbf{b}$, and three matrices $A 
              $\beta_1 (\mathbf{a} \otimes \mathbf{b}) = 4 \begin{bmatrix} 2 & 4 & 6 \\ 6 & 12 & 18 \\ 10 & 20 & 30 \end{bmatrix} = \begin{bmatrix} 8 & 16 & 24 \\ 24 & 48 & 72 \\ 40 & 80 & 120 \end{bmatrix}$\\
              $\langle \beta_1 \mathbf{a}, \mathbf{b} \rangle = (4\mathbf{a})^\top \mathbf{b} = \left(4 \begin{bmatrix} 1 \\ 3 \\ 5 \end{bmatrix}\right)^\top \begin{bmatrix} 4 & 12 & 20 \end{bmatrix} \begin{bmatrix} 2 \\ 4 \\ 6 \end{bmatrix} = 4 \cdot 2 + 12 \cdot 4 + 20 \cdot 6 = 176$\\
              $\beta_1 \mathbf{a} \otimes \mathbf{b} = (4\mathbf{a})\mathbf{b}^\top = \left(4 \begin{bmatrix} 1 \\ 3 \\ 5 \end{bmatrix}\right) \begin{bmatrix} 2 & 4 & 6 \end{bmatrix} = \begin{bmatrix} 4 \\ 12 \\ 20 \end{bmatrix} \begin{bmatrix} 2 & 4 & 6 \end{bmatrix} = \begin{bmatrix} 4 \cdot 2 & 4 \cdot 4 & 4 \cdot 6 \\ 12 \cdot 2 & 12 \cdot 4 & 12 \cdot 6 \\ 20 \cdot 2 & 20 \cdot 4 & 20 \cdot 6 \end{bmatrix} = \begin{bmatrix} 8 & 16 & 24 \\ 24 & 48 & 72 \\ 40 & 80 & 120 \end{bmatrix}$\\
+             $\langle\mathbf{b}, \mathbf{a}^\top\rangle = \mathbf{b}^\top\mathbf{a}^\top = \text{DNE bc dimensions are incompatible}$\\
+             $\mathbf{b} \otimes \mathbf{a}^\top = \mathbf{b}(\mathbf{a}^\top)^\top = \mathbf{b}\mathbf{a} = \text{DNE bc dimensions are incompatible}$
 \end{enumerate}
 \item Code:
 \begin{lstlisting}[language=python]
@@ -639,6 +641,22 @@ inner_outer(beta_1 * a, b)
 [[  8  16  24]
  [ 24  48  72]
  [ 40  80 120]]
+\end{verbatim}
+We need to hard reshape the vectors for numpy to not throw an error as the internal
+implementation of inner and outer products expect 1D arrays for vectors. 
+\textit{np.outer} will always return a matrix, so we use \textit{@} (matmul) operator
+to replicate the true intended outer product calculation and get the expected error.
+\begin{lstlisting}[language=python]
+np.inner(b.reshape(3, 1), a.reshape(3, 1).T)
+\end{lstlisting}
+\begin{verbatim}
+ValueError: shapes (3,1) and (3,1) not aligned: 1 (dim 1) != 3 (dim 0)
+\end{verbatim}
+\begin{lstlisting}[language=python]
+b.reshape(3, 1).T @ a.reshape(3, 1).T
+\end{lstlisting}
+\begin{verbatim}
+ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 3)
 \end{verbatim}
 \end{enumerate}
 \end{enumerate}
