--- a/HW1/hw1.tex
+++ b/HW1/hw1.tex
@@ -750,7 +750,8 @@ ValueError: shapes (3,1) and (3,1) not aligned: 1 (dim 1) != 3 (dim 0)
 b.reshape(3, 1).T @ a.reshape(3, 1).T
 \end{lstlisting}
 \begin{verbatim}
-ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 3)
+ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, 
+with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 3)
 \end{verbatim}
 \end{enumerate}
 \end{enumerate}
