--- a/HW1/hw1.tex
+++ b/HW1/hw1.tex
@@ -609,6 +609,8 @@ Given two 3-dimensional vectors $\mathbf{a}, \mathbf{b}$, and three matrices $A 
              $\beta_1 \mathbf{a} \otimes \mathbf{b} = (4\mathbf{a})\mathbf{b}^\top = \left(4 \begin{bmatrix} 1 \\ 3 \\ 5 \end{bmatrix}\right) \begin{bmatrix} 2 & 4 & 6 \end{bmatrix} = \begin{bmatrix} 4 \\ 12 \\ 20 \end{bmatrix} \begin{bmatrix} 2 & 4 & 6 \end{bmatrix} = \begin{bmatrix} 4 \cdot 2 & 4 \cdot 4 & 4 \cdot 6 \\ 12 \cdot 2 & 12 \cdot 4 & 12 \cdot 6 \\ 20 \cdot 2 & 20 \cdot 4 & 20 \cdot 6 \end{bmatrix} = \begin{bmatrix} 8 & 16 & 24 \\ 24 & 48 & 72 \\ 40 & 80 & 120 \end{bmatrix}$\\
              $\langle\mathbf{b}, \mathbf{a}^\top\rangle = \mathbf{b}^\top\mathbf{a}^\top = \text{DNE bc dimensions are incompatible}$\\
              $\mathbf{b} \otimes \mathbf{a}^\top = \mathbf{b}(\mathbf{a}^\top)^\top = \mathbf{b}\mathbf{a} = \text{DNE bc dimensions are incompatible}$
+\item [(v)] $\det(\mathbf{AB}) = \det\left(\begin{bmatrix} 1 & 2 & 3 \\ 2 & 4 & 6 \end{bmatrix} \begin{bmatrix} 7 & 8 \\ 9 & 10 \\ 11 & 12 \end{bmatrix}\right) = \det\left(\begin{bmatrix} 58 & 64 \\ 116 & 128 \end{bmatrix}\right) = 58 \cdot 128 - 64 \cdot 116 = 7424 - 7424 = 0$\\
+             $\det(\mathbf{BC}) = \det\left(\begin{bmatrix} 7 & 8 \\ 9 & 10 \\ 11 & 12 \end{bmatrix} \begin{bmatrix} 1 & 0 & 0 \\ 0 & 0 & 1 \end{bmatrix}\right) = \det\left(\begin{bmatrix} 7 & 8 & 0 \\ 9 & 10 & 0 \\ 11 & 12 & 0 \end{bmatrix}\right) = 7 \det\left(\begin{bmatrix} 10 & 0 \\ 12 & 0 \end{bmatrix}\right) - 8 \det\left(\begin{bmatrix} 9 & 0 \\ 11 & 0 \end{bmatrix}\right) + 0 = 7(10 \cdot 0 - 0 \cdot 12) - 8(9 \cdot 0 - 0 \cdot 11) + 0 = 0 - 0 + 0 = 0$
 \end{enumerate}
 \item Code:
 \begin{lstlisting}[language=python]
@@ -752,6 +754,18 @@ b.reshape(3, 1).T @ a.reshape(3, 1).T
 \begin{verbatim}
 ValueError: matmul: Input operand 1 has a mismatch in its core dimension 0, 
 with gufunc signature (n?,k),(k,m?)->(n?,m?) (size 1 is different from 3)
+\end{verbatim}
+\begin{lstlisting}[language=python]
+np.linalg.det(A @ B)
+\end{lstlisting}
+\begin{verbatim}
+np.float64(0.0)
+\end{verbatim}
+\begin{lstlisting}[language=python]
+np.linalg.det(B @ C)
+\end{lstlisting}
+\begin{verbatim}
+np.float64(0.0)
 \end{verbatim}
 \end{enumerate}
 \end{enumerate}
