--- a/HW2/hw2.tex
+++ b/HW2/hw2.tex
@@ -293,7 +293,7 @@ matches the solution from \textbf{Question 1}.
 Perform QR decomposition for the matrix corresponding to the equations in \textbf{Question 1} using the Gram-Schmidt algorithm. Using the decomposition, solve for $\mathbf{x}$. Match your solution with that of \textbf{Question 1} and \textbf{Question 2}.
 
 \textbf{Solution:} \\
-We start with our matrix:
+We start with our matrix $\mathbf{A}$:
 \[\begin{bmatrix}
 2 & 6 & 7 \\
 -8 & 10 & 3 \\
@@ -303,12 +303,35 @@ We start with our matrix:
 Thus:
 \begin{flalign*}
 \mathbf{u}_1 &= (2, -8, 9) & \\
-\mathbf{e}_1 &= \frac{\mathbf{u}_1}{\|\mathbf{u}_1\|} = \frac{(2, -8, 9)}{\sqrt{2^2 + (-8)^2 + 9^2}} = \frac{(2, -8, 9)}{\sqrt{149}} & \\
+\mathbf{e}_1 &= \frac{\mathbf{u}_1}{\|\mathbf{u}_1\|} = \frac{(2, -8, 9)}{\sqrt{2^2 + (-8)^2 + 9^2}} = \frac{(2, -8, 9)}{\sqrt{149}} = \left( \frac{2}{\sqrt{149}}, \frac{-8}{\sqrt{149}}, \frac{9}{\sqrt{149}} \right) & \\
 \mathbf{u}_2 &= (6, 10, 10) - \text{proj}_{\mathbf{e}_1} (6, 10, 10) = (6, 10, 10) - \left( (6, 10, 10) \cdot \mathbf{e}_1 \right) \mathbf{e}_1 & \\
 &= (6, 10, 10) - \left( \frac{6 \cdot 2}{\sqrt{149}} + \frac{10 \cdot (-8)}{\sqrt{149}} + \frac{10 \cdot 9}{\sqrt{149}} \right) \frac{(2, -8, 9)}{\sqrt{149}} = (6, 10, 10) - \frac{22}{149} (2, -8, 9) & \\
 &= \left( 6 - \frac{44}{149}, 10 + \frac{176}{149}, 10 - \frac{198}{149} \right) = \left( \frac{850}{149}, \frac{1666}{149}, \frac{1292}{149} \right) & \\
-\mathbf{e}_2 &= \frac{\mathbf{u}_2}{\|\mathbf{u}_2\|} = \frac{\left( \frac{850}{149}, \frac{1666}{149}, \frac{1292}{149} \right)}{\sqrt{\left( \frac{850}{149} \right)^2 + \left( \frac{1666}{149} \right)^2 + \left( \frac{1292}{149} \right)^2}} = \frac{(850, 1666, 1292)}{\sqrt{850^2 + 1666^2 + 1292^2}} & \\
+\mathbf{e}_2 &= \frac{\mathbf{u}_2}{\|\mathbf{u}_2\|} = \frac{\left( \frac{850}{149}, \frac{1666}{149}, \frac{1292}{149} \right)}{\sqrt{\left( \frac{850}{149} \right)^2 + \left( \frac{1666}{149} \right)^2 + \left( \frac{1292}{149} \right)^2}} = \frac{(850, 1666, 1292)}{\sqrt{850^2 + 1666^2 + 1292^2}} \\
+&= \left( \frac{850}{34\sqrt{4470}}, \frac{1666}{34\sqrt{4470}}, \frac{1292}{34\sqrt{4470}} \right) = \left( \frac{25}{\sqrt{4470}}, \frac{49}{\sqrt{4470}}, \frac{38}{\sqrt{4470}} \right) & \\
+\mathbf{u}_3 &= (7, 3, 1) - \text{proj}_{\mathbf{e}_1} (7, 3, 1) - \text{proj}_{\mathbf{e}_2} (7, 3, 1) & \\
+&= (7, 3, 1) - \left( \frac{7 \cdot 2}{\sqrt{149}} + \frac{3 \cdot (-8)}{\sqrt{149}} + \frac{1 \cdot 9}{\sqrt{149}} \right) \frac{(2, -8, 9)}{\sqrt{149}} - \left( \frac{7 \cdot 25}{\sqrt{4470}} + \frac{3 \cdot 49}{\sqrt{4470}} + \frac{1 \cdot 38}{\sqrt{4470}} \right) \frac{(25, 49, 38)}{\sqrt{4470}} & \\
+&= (7, 3, 1) + \frac{1}{149}(2, -8, 9) - \frac{360}{4470} (25, 49, 38) & \\
+&= (7, 3, 1) + \frac{1}{149}(2, -8, 9) - \frac{12}{149} (25, 49, 38) & \\
+&= \left( 7 + \frac{2}{149} - \frac{300}{149}, 3 - \frac{8}{149} - \frac{588}{149}, 1 + \frac{9}{149} - \frac{456}{149} \right) = (5, -1, -2) & \\
+\mathbf{e}_3 &= \frac{\mathbf{u}_3}{\|\mathbf{u}_3\|} = \frac{(5, -1, -2)}{\sqrt{5^2 + (-1)^2 + (-2)^2}} = \frac{(5, -1, -2)}{\sqrt{30}} = \left( \frac{5}{\sqrt{30}}, \frac{-1}{\sqrt{30}}, \frac{-2}{\sqrt{30}} \right) &
 \end{flalign*}
+
+The QR decomposition matrices are then as follows:
+\[QR = \begin{bmatrix}
+e_1 | e_2 | e_3
+\end{bmatrix}
+\begin{bmatrix}
+a_1 \cdot e_1 & a_2 \cdot e_1 & a_3 \cdot e_1 \\
+0 & a_2 \cdot e_2 & a_3 \cdot e_2 \\
+0 & 0 & a_3 \cdot e_3
+\end{bmatrix}\]
+Thus:
+\[Q = \begin{bmatrix}
+\frac{2}{\sqrt{149}} & \frac{25}{\sqrt{4470}} & \frac{5}{\sqrt{30}} \\
+\frac{-8}{\sqrt{149}} & \frac{49}{\sqrt{4470}} & \frac{-1}{\sqrt{30}} \\
+\frac{9}{\sqrt{149}} & \frac{38}{\sqrt{4470}} & \frac{-2}{\sqrt{30}}
+\end{bmatrix}, \quad R = \]
 
 \newpage
 
