--- a/HW2/hw2.tex
+++ b/HW2/hw2.tex
@@ -303,35 +303,74 @@ We start with our matrix $\mathbf{A}$:
 Thus:
 \begin{flalign*}
 \mathbf{u}_1 &= (2, -8, 9) & \\
-\mathbf{e}_1 &= \frac{\mathbf{u}_1}{\|\mathbf{u}_1\|} = \frac{(2, -8, 9)}{\sqrt{2^2 + (-8)^2 + 9^2}} = \frac{(2, -8, 9)}{\sqrt{149}} = \left( \frac{2}{\sqrt{149}}, \frac{-8}{\sqrt{149}}, \frac{9}{\sqrt{149}} \right) & \\
-\mathbf{u}_2 &= (6, 10, 10) - \text{proj}_{\mathbf{e}_1} (6, 10, 10) = (6, 10, 10) - \left( (6, 10, 10) \cdot \mathbf{e}_1 \right) \mathbf{e}_1 & \\
+\mathbf{q}_1 &= \frac{\mathbf{u}_1}{\|\mathbf{u}_1\|} = \frac{(2, -8, 9)}{\sqrt{2^2 + (-8)^2 + 9^2}} = \frac{(2, -8, 9)}{\sqrt{149}} = \left( \frac{2}{\sqrt{149}}, \frac{-8}{\sqrt{149}}, \frac{9}{\sqrt{149}} \right) & \\
+\mathbf{u}_2 &= (6, 10, 10) - \text{proj}_{\mathbf{q}_1} (6, 10, 10) = (6, 10, 10) - \left( (6, 10, 10) \cdot \mathbf{q}_1 \right) \mathbf{q}_1 & \\
 &= (6, 10, 10) - \left( \frac{6 \cdot 2}{\sqrt{149}} + \frac{10 \cdot (-8)}{\sqrt{149}} + \frac{10 \cdot 9}{\sqrt{149}} \right) \frac{(2, -8, 9)}{\sqrt{149}} = (6, 10, 10) - \frac{22}{149} (2, -8, 9) & \\
 &= \left( 6 - \frac{44}{149}, 10 + \frac{176}{149}, 10 - \frac{198}{149} \right) = \left( \frac{850}{149}, \frac{1666}{149}, \frac{1292}{149} \right) & \\
-\mathbf{e}_2 &= \frac{\mathbf{u}_2}{\|\mathbf{u}_2\|} = \frac{\left( \frac{850}{149}, \frac{1666}{149}, \frac{1292}{149} \right)}{\sqrt{\left( \frac{850}{149} \right)^2 + \left( \frac{1666}{149} \right)^2 + \left( \frac{1292}{149} \right)^2}} = \frac{(850, 1666, 1292)}{\sqrt{850^2 + 1666^2 + 1292^2}} \\
+\mathbf{q}_2 &= \frac{\mathbf{u}_2}{\|\mathbf{u}_2\|} = \frac{\left( \frac{850}{149}, \frac{1666}{149}, \frac{1292}{149} \right)}{\sqrt{\left( \frac{850}{149} \right)^2 + \left( \frac{1666}{149} \right)^2 + \left( \frac{1292}{149} \right)^2}} = \frac{(850, 1666, 1292)}{\sqrt{850^2 + 1666^2 + 1292^2}} \\
 &= \left( \frac{850}{34\sqrt{4470}}, \frac{1666}{34\sqrt{4470}}, \frac{1292}{34\sqrt{4470}} \right) = \left( \frac{25}{\sqrt{4470}}, \frac{49}{\sqrt{4470}}, \frac{38}{\sqrt{4470}} \right) & \\
 \mathbf{u}_3 &= (7, 3, 1) - \text{proj}_{\mathbf{e}_1} (7, 3, 1) - \text{proj}_{\mathbf{e}_2} (7, 3, 1) & \\
 &= (7, 3, 1) - \left( \frac{7 \cdot 2}{\sqrt{149}} + \frac{3 \cdot (-8)}{\sqrt{149}} + \frac{1 \cdot 9}{\sqrt{149}} \right) \frac{(2, -8, 9)}{\sqrt{149}} - \left( \frac{7 \cdot 25}{\sqrt{4470}} + \frac{3 \cdot 49}{\sqrt{4470}} + \frac{1 \cdot 38}{\sqrt{4470}} \right) \frac{(25, 49, 38)}{\sqrt{4470}} & \\
 &= (7, 3, 1) + \frac{1}{149}(2, -8, 9) - \frac{360}{4470} (25, 49, 38) & \\
 &= (7, 3, 1) + \frac{1}{149}(2, -8, 9) - \frac{12}{149} (25, 49, 38) & \\
 &= \left( 7 + \frac{2}{149} - \frac{300}{149}, 3 - \frac{8}{149} - \frac{588}{149}, 1 + \frac{9}{149} - \frac{456}{149} \right) = (5, -1, -2) & \\
-\mathbf{e}_3 &= \frac{\mathbf{u}_3}{\|\mathbf{u}_3\|} = \frac{(5, -1, -2)}{\sqrt{5^2 + (-1)^2 + (-2)^2}} = \frac{(5, -1, -2)}{\sqrt{30}} = \left( \frac{5}{\sqrt{30}}, \frac{-1}{\sqrt{30}}, \frac{-2}{\sqrt{30}} \right) &
+\mathbf{q}_3 &= \frac{\mathbf{u}_3}{\|\mathbf{u}_3\|} = \frac{(5, -1, -2)}{\sqrt{5^2 + (-1)^2 + (-2)^2}} = \frac{(5, -1, -2)}{\sqrt{30}} = \left( \frac{5}{\sqrt{30}}, \frac{-1}{\sqrt{30}}, \frac{-2}{\sqrt{30}} \right) &
 \end{flalign*}
 
 The QR decomposition matrices are then as follows:
 \[QR = \begin{bmatrix}
-e_1 | e_2 | e_3
+q_1 | q_2 | q_3
 \end{bmatrix}
 \begin{bmatrix}
-a_1 \cdot e_1 & a_2 \cdot e_1 & a_3 \cdot e_1 \\
-0 & a_2 \cdot e_2 & a_3 \cdot e_2 \\
-0 & 0 & a_3 \cdot e_3
+a_1 \cdot q_1 & a_2 \cdot q_1 & a_3 \cdot q_1 \\
+0 & a_2 \cdot q_2 & a_3 \cdot q_2 \\
+0 & 0 & a_3 \cdot q_3
 \end{bmatrix}\]
 Thus:
 \[Q = \begin{bmatrix}
 \frac{2}{\sqrt{149}} & \frac{25}{\sqrt{4470}} & \frac{5}{\sqrt{30}} \\
 \frac{-8}{\sqrt{149}} & \frac{49}{\sqrt{4470}} & \frac{-1}{\sqrt{30}} \\
 \frac{9}{\sqrt{149}} & \frac{38}{\sqrt{4470}} & \frac{-2}{\sqrt{30}}
-\end{bmatrix}, \quad R = \]
+\end{bmatrix}\] 
+\[\resizebox{0.9\hsize}{!}{$\quad R = \begin{bmatrix}
+2(\frac{2}{\sqrt{149}}) + (-8)(\frac{-8}{\sqrt{149}}) + 9(\frac{9}{\sqrt{149}}) & 6(\frac{2}{\sqrt{149}}) + 10(\frac{-8}{\sqrt{149}}) + 10(\frac{9}{\sqrt{149}}) & 7(\frac{2}{\sqrt{149}}) + 3(\frac{-8}{\sqrt{149}}) + 1(\frac{9}{\sqrt{149}}) \\
+0 & 6(\frac{25}{\sqrt{4470}}) + 10(\frac{49}{\sqrt{4470}}) + 10(\frac{38}{\sqrt{4470}}) & 7(\frac{25}{\sqrt{4470}}) + 3(\frac{49}{\sqrt{4470}}) + 1(\frac{38}{\sqrt{4470}}) \\
+0 & 0 & 7(\frac{5}{\sqrt{30}}) + 3(\frac{-1}{\sqrt{30}}) + 1(\frac{-2}{\sqrt{30}})
+\end{bmatrix}$}\]
+\[\quad R = \begin{bmatrix}
+\sqrt{149} & \frac{22}{\sqrt{149}} & -\frac{1}{\sqrt{149}} \\
+0 & \frac{1020}{\sqrt{4470}} & \frac{360}{\sqrt{4470}} \\
+0 & 0 & \sqrt{30}
+\end{bmatrix}\]
+We can now solve for $\mathbf{x}$ as:
+\begin{gather*}
+QR\mathbf{x} = \mathbf{b} \\
+R\mathbf{x} = Q^\top \mathbf{b} \\
+Q^\top \mathbf{b} = \begin{bmatrix}
+\frac{2}{\sqrt{149}} & \frac{-8}{\sqrt{149}} & \frac{9}{\sqrt{149}} \\
+\frac{25}{\sqrt{4470}} & \frac{49}{\sqrt{4470}} & \frac{38}{\sqrt{4470}} \\
+\frac{5}{\sqrt{30}} & \frac{-1}{\sqrt{30}} & \frac{-2}{\sqrt{30}}
+\end{bmatrix}
+\begin{bmatrix}-11 \\ -15 \\ 25
+\end{bmatrix} = \begin{bmatrix}
+\frac{2(-11) + (-8)(-15) + 9(25)}{\sqrt{149}} \\
+\frac{25(-11) + 49(-15) + 38(25)}{\sqrt{4470}} \\	
+\frac{5(-11) + (-1)(-15) + (-2)(25)}{\sqrt{30}}
+\end{bmatrix} = \begin{bmatrix}
+\frac{323}{\sqrt{149}} \\ 
+\frac{-60}{\sqrt{4470}} \\ 
+\frac{-90}{\sqrt{30}}
+\end{bmatrix}
+\end{gather*}
+Now we can solve for $\mathbf{x}$ using backward substitution:
+From the third row:
+\[\sqrt{30}x_3 = \frac{-90}{\sqrt{30}} \therefore x_3 = -3\]
+Plug in $x_3$ into the second row:
+\[\frac{1020}{\sqrt{4470}}x_2 + \frac{360}{\sqrt{4470}}(-3) = \frac{-60}{\sqrt{4470}} \therefore x_2 = 1\]
+Plug in $x_2$ and $x_3$ into the first row:
+\[\sqrt{149}x_1 + \frac{22}{\sqrt{149}}(1) - \frac{1}{\sqrt{149}}(-3) = \frac{323}{\sqrt{149}} \therefore x_1 = 2\]
+\[\therefore \mathbf{x} = \begin{bmatrix} 2 & 1 & -3 \end{bmatrix}^\top\] which
+matches the solution from \textbf{Question 1} and \textbf{Question 2}.
 
 \newpage
 
